@@ -77,3 +77,23 @@ test02()
   std::basic_string s4((wchar_t)1, L'a', std::allocator<wchar_t>());
   check_type<std::wstring>(s4);
 }
+
+void
+test05()
+{
+  // LWG 3075 basic_string needs deduction guides from basic_string_view
+  std::wstring_view sv{L"A View to a Kill"};
+  const std::allocator<wchar_t> a;
+
+  std::basic_string s1(sv);
+  check_type<std::wstring>(s1);
+
+  std::basic_string s2(sv, a);
+  check_type<std::wstring>(s2);
+
+  std::basic_string s3(sv, 2u, 6u);
+  check_type<std::wstring>(s3);
+
+  std::basic_string s4(sv, 2u, 6u, a);
+  check_type<std::wstring>(s4);
+}
